<resources>
    <string name="app_name">Przepisy domowe</string>
    <string name="welcome_text">Przepisy domowe</string>
    <string name="welcome_text_small">Twoja własna baza przepisów</string>
    <string name="register">Zarejestruj</string>
    <string name="login">Zaloguj</string>
    <string name="without_login_register">Kontynuuj bez logowania</string>
    <string name="enter_your_name">Wprowadź swoje imię:</string>
    <string name="your_name">Imię</string>
    <string name="enter_your_last_name">Wprowadź swoje nazwisko:</string>
    <string name="your_last_name">Nazwisko</string>
    <string name="enter_your_login">Wprowadź swój login:</string>
    <string name="your_login">Login</string>
    <string name="enter_your_password">Wprowadź swoje hasło:</string>
    <string name="your_password">Hasło</string>
    <string name="enter_your_password_again">Powtórz swoje hasło:</string>
    <string name="your_password_again">Powtórzone hasło</string>
    <string name="enter_your_email">Wprowadź swój email:</string>
    <string name="your_email">Email</string>
    <string name="enter_your_email_again">Powtórz swój email:</string>
    <string name="your_email_again">Powtórzony Email</string>
    <string name="remember_password">Zapamiętaj hasło</string>
    <string name="alphabetically">Alfabetycznie</string>
    <string name="last_add">Ostatnio dodane</string>
    <string name="highest_rated">Najwyżej oceniane</string>
    <string name="default_sorting">Domyślnie</string>
    <string name="favorites">Ulubione</string>
    <string name="my_recipe">Moje przepisy</string>
    <string name="searching">Wyszukaj przepis</string>
    <string name="adding">Dodaj przepis</string>
    <string name="calculating">Przelicz składniki</string>
    <string name="timer">Timer</string>
    <string name="logout">Wyloguj</string>
    <string name="category">Kategorie</string>
    <string name="something">PRÓBA</string>
    <string name="licences">Licencje</string>
    <string name="about_app">O aplikacji</string>
    <string name="description">Opis</string>
    <string name="available_option">Dostępne opcje</string>
    <string name="my_profile">Mój profil</string>
    <string name="login_password_error_message">Podany login lub hasło są błędne</string>
    <string name="logout_error_message">Błąd wylogowania</string>
    <string name="server_connection_error">Błąd połączenia z serwerem!</string>
    <string name="logout_question">Czy chcesz się wylogować?</string>
    <string name="yes">TAK</string>
    <string name="no">NIE</string>
    <string name="add_ingredients">Dodaj składniki</string>
    <string name="add_steps">Dodaj kroki</string>
    <string name="add_description">Dodaj jednolity opis</string>
    <string name="add_main_photo">Dodaj zdjęcie główne</string>
    <string name="add_photo">Dodaj zdjęcie</string>
    <string name="recipe_details">Szczegóły przepisu</string>
    <string name="recipe_name">Nazwa przepisu</string>
    <string name="recipe_category">Kategoria przepisu</string>
    <string name="choose_category_text_view">Wybierz kategoria przepisu</string>
    <string name="ingredients_title">Dodawanie składników</string>
    <string name="snacks_and_starters">Przekąski i przystawki</string>
    <string name="soups">Zupy</string>
    <string name="pasta">Makarony</string>
    <string name="pastes">Pasty</string>
    <string name="chicken_dishes">Dania z kurczakiem</string>
    <string name="beef_dishes">Dania z wołowiną</string>
    <string name="pork_dishes">Dania z wieprzowiną</string>
    <string name="turkey_dishes">Dania z indykiem</string>
    <string name="fish_dishes">Dania z rybą</string>
    <string name="seafood_dishes">Dania z owocami morza</string>
    <string name="other_dinner_dishes">Inne dania obiadowe</string>
    <string name="casserolles">Zapiekanki</string>
    <string name="salads">Sałatki</string>
    <string name="vegetarian">Wegetariańskie</string>
    <string name="cakes_and_cookies">Ciasta i cistka</string>
    <string name="desserts">Desery</string>
    <string name="grilled">Grillowane</string>
    <string name="pizza">Pizza</string>
    <string name="drinks">Napoje i drinki</string>
    <string name="sauces_and_dip">Sosy i dipy</string>
    <string name="other_dishes">Inne</string>
    <string name="add_recipe_title_step_one">Krok 1: Główne informacje</string>
    <string name="add_recipe_title_step_two">Krok 2: Dodaj składniki</string>
    <string name="add_recipe_title_step_three">Krok 3: Dodaj kroki lub opis</string>
    <string name="category_search_title">Kategorie przepisów</string>
    <string name="set_timer">Ustaw czasomierz</string>
    <string name="user_profile">Dane użytkownika</string>
    <string name="edit_comment">Edycja komentarza</string>
    <string name="load_photo">Załaduj zdjęcie</string>
    <string name="choose_category">Kategoria przepisu</string>
    <string name="input_prepare_time">Czas przygotowania</string>
    <string name="input_cook_time">Czas gotowania</string>
    <string name="input_bake_time">Czas pieczenia</string>
    <string name="set_time_title">Ustaw czas (HH:MM)</string>
    <string name="set_time">Ustaw</string>
    <string name="add_time">HH:MM</string>
    <string name="rating_name">Ocena przepisu:</string>
    <string name="step">Krok</string>
    <string name="all_steps_description">Cały opis</string>
    <string name="edit">Edytuj</string>
    <string name="set_url">Podaj adres URL zdjęcia</string>
    <string name="save">Zapisz</string>
    <string name="save_photo">Zapisz zdjęcie</string>
    <string name="cancel">Anuluj</string>
    <string name="url_address">Adres URL</string>
    <string name="main_info">Główne</string>
    <string name="ingredients">Składniki</string>
    <string name="steps">Kroki</string>
    <string name="comments">Komentarz</string>
    <string name="send_comment">Wyślij</string>
    <string name="add_comment">Napisz komentarz...</string>
    <string name="user_login">Login:</string>
    <string name="user_first_name">Imię:</string>
    <string name="user_last_name">Nazwisko:</string>
    <string name="user_email">Email:</string>
    <string name="user_password">Hasło:</string>
    <string name="user_repeat_password">Powtórzone hasło</string>
    <string name="info_about_shopping_list">Naciśnij na składnik, aby skreślić go na liście zakupów. </string>
    <string name="info_about_licences_list">Jeśli chcesz dowiedzieć się więcej o każde z licencji, kliknij w jej kartę. </string>
    <string name="license_one_name">Support Library Packages</string>
    <string name="license_one_author"> </string>
    <string name="license_one_description">Used to adjust and for better handling of list and grid views. </string>
    <string name="license_one_url">https://developer.android.com/topic/libraries/support-library/packages</string>
    <string name="license_two_name">Butter Knife</string>
    <string name="license_two_author">Jake Wharton</string>
    <string name="license_two_description">Used to find and automatically cast the corresponding view in layout. </string>
    <string name="license_two_url">http://jakewharton.github.io/butterknife/</string>
    <string name="license_three_name">Picasso</string>
    <string name="license_three_author">Square</string>
    <string name="license_three_description">Used to speed up loading of images. </string>
    <string name="license_three_url">http://square.github.io/picasso/</string>
    <string name="license_four_name">Retrofit</string>
    <string name="license_four_author">Square</string>
    <string name="license_four_description">Used to manage connections with server and handle JSON to POJO deserialization with ease. Also retrofit handles Gzip decompression in the fly. </string>
    <string name="license_four_url">https://square.github.io/retrofit/</string>
    <string name="license_five_name">Okhttp</string>
    <string name="license_five_author">Square</string>
    <string name="license_five_description">Used to support all requests and responses. </string>
    <string name="license_five_url">http://square.github.io/okhttp/</string>
    <string name="license_six_name">Gson</string>
    <string name="license_six_author">Google Inc.</string>
    <string name="license_six_description">Used to convert Java Objects into their JSON representation.. </string>
    <string name="license_six_url">https://github.com/google/gson</string>
    <string name="license_seven_name">Flask</string>
    <string name="license_seven_author">Armin Ronacher</string>
    <string name="license_seven_description">Used in Python for RESTful request dispatching and support for secure cookies (client side sessions).. </string>
    <string name="license_seven_url">http://flask.pocoo.org/</string>
    <string name="license_eight_name">Material design icons</string>
    <string name="license_eight_author">Google Inc.</string>
    <string name="license_eight_description">Used to download and set icons (e. g. in drawer). </string>
    <string name="license_eight_url">https://github.com/google/material-design-icons</string>
    <string name="license_nine_name">Food photos</string>
    <string name="license_nine_author">Pixabay</string>
    <string name="license_nine_description">Used to download free of cost food images (e. g. category). </string>
    <string name="license_nine_url">https://pixabay.com/pl/photos/?cat=food</string>
    <string name="license_ten_name">Free vector icons</string>
    <string name="license_ten_author">Freepik</string>
    <string name="license_ten_description">Used to download and set icons (e. g. in drawer). </string>
    <string name="license_ten_url">https://www.flaticon.com/</string>
    <string name="license_eleven_name">Bitmap - String converter</string>
    <string name="license_eleven_author">Vinay Rathod</string>
    <string name="license_eleven_description">Used to convert image Bitmap to String and String to image Bitmap. </string>
    <string name="license_eleven_url">http://vinayandroid.blogspot.com/2015/02/convert-image-bitmap-to-string.html</string>
    <string name="license_twelve_name">Glide</string>
    <string name="license_twelve_author">Bump Technologies</string>
    <string name="license_twelve_description">Used to speed up loading of images.  </string>
    <string name="license_twelve_url">https://github.com/bumptech/glide</string>
    <string name="license_thirteen_name">RingProgressBar</string>
    <string name="license_thirteen_author">HotBitmapGG</string>
    <string name="license_thirteen_description">Used to countdown time in timer. </string>
    <string name="license_thirteen_url">https://github.com/HotBitmapGG/RingProgressBar</string>
    <string name="app_description">Opis aplikacji</string>
    <string name="app_description_title">O aplikacji</string>
    <string name="app_author_title">O autorze</string>
    <string name="app_version_title">O wersji</string>
    <string name="app_error_title">Zgłoś błąd</string>
    <string name="app_description_title_ang">About application</string>
    <string name="app_author_title_ang">About author</string>
    <string name="app_version_title_ang">About version</string>
    <string name="app_error_title_ang">Report an error</string>
    <string name="app_description_text_ang">Przepisy domowe Helasia is my first complex Android
    application where I learned many programming concepts and tried to make useful tool in everyday life.
    Application code is on my github account:  HelAsia.
  </string>
    <string name="app_error_text_ang">If You found error in my application, I would be grateful for the information. </string>
    <string name="app_error_text_pl">Jeśli udało Ci się znaleźć błąd w mojej aplikacji, będę wdzięczna za informację. </string>
    <string name="logo">Logo</string>
    <string name="send_email">Wyślij email</string>
</resources>