<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:title="@string/available_option">
    <menu>
      <group
        android:id="@+id/menu_group_one"
        android:checkableBehavior="single">
        <item
          android:id="@+id/search_nav"
          android:icon="@mipmap/ic_search"
          android:title="@string/searching"/>
        <item
          android:id="@+id/category_nav"
          android:icon="@mipmap/ic_insert_drive_file_black_24dp"
          android:title="@string/category"/>
        <item
          android:id="@+id/add_nav"
          android:icon="@mipmap/ic_add_circle"
          android:title="@string/adding"/>
        <item
          android:id="@+id/calculating_nav"
          android:icon="@mipmap/ic_assessment_black_18dp"
          android:title="@string/calculating"/>
        <item
          android:id="@+id/timer_nav"
          android:icon="@mipmap/ic_access_alarm"
          android:title="@string/timer"/>
       </group>
     </menu>
  </item>

  <item android:title="@string/my_profile">
    <menu>
      <group
        android:id="@+id/my_profile_group"
        android:checkableBehavior="single">
          <item
            android:id="@+id/my_profile_nav"
            android:title="@string/my_profile"
            android:icon="@mipmap/ic_account_circle"/>
        <item
          android:id="@+id/my_recipe_nav"
          android:icon="@mipmap/cook_icon"
          android:title="@string/my_recipe"/>
          <item
            android:id="@+id/favorites_nav"
            android:icon="@mipmap/ic_favorite"
            android:title="@string/favorites"/>
      </group>
    </menu>
  </item>

  <item android:title="@string/about_app">
    <menu>
      <group
        android:id="@+id/about_app_group"
        android:checkableBehavior="single">
        <item
          android:id="@+id/about_app_nav"
          android:title="@string/description"
          android:icon="@mipmap/ic_info"/>
        <item
          android:id="@+id/licences_nav"
          android:title="@string/licences"
          android:icon="@mipmap/ic_assignment"/>
      </group>
    </menu>
  </item>


  <group
    android:id="@+id/logout_group"
    android:checkableBehavior="single">
    <item
      android:id="@+id/logout_nav"
      android:icon="@mipmap/ic_power_settings_new"
      android:title="@string/logout"/>
  </group>
</menu>