<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item android:title="@string/available_option">
    <menu>
      <group
        android:id="@+id/menu_group_one"
        android:checkableBehavior="single">
        <item
          android:id="@+id/search_nav"
          android:icon="@drawable/search"
          android:title="@string/searching"/>
        <item
          android:id="@+id/add_nav"
          android:icon="@drawable/add"
          android:title="@string/adding"/>
        <item
          android:id="@+id/calculating_nav"
          android:icon="@drawable/calculator"
          android:title="@string/calculating"/>
        <item
          android:id="@+id/timer_nav"
          android:icon="@drawable/timer"
          android:title="@string/timer"/>
       </group>
     </menu>
  </item>

  <item android:title="@string/my_profile">
    <menu>
      <group
        android:id="@+id/my_profile_group"
        android:checkableBehavior="single">
          <item
            android:id="@+id/my_profile_nav"
            android:title="@string/my_profile"/>
          <item
            android:id="@+id/favorites_nav"
            android:icon="@drawable/favorites"
            android:title="@string/favorites"/>
      </group>
    </menu>
  </item>

  <item android:title="@string/about_app">
    <menu>
      <group
        android:id="@+id/about_app_group"
        android:checkableBehavior="single">
        <item
          android:id="@+id/about_app_nav"
          android:title="@string/description"/>
        <item
          android:id="@+id/licences_nav"
          android:title="@string/licences"/>
      </group>
    </menu>
  </item>


  <group
    android:id="@+id/logout_group"
    android:checkableBehavior="single">
    <item
      android:id="@+id/logout_nav"
      android:icon="@drawable/turnoff"
      android:title="@string/logout"/>
  </group>
</menu>