<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group
    android:id="@+id/menu_group_one"
    android:checkableBehavior="single">
    <item android:title="@string/available_option">
      <menu>
        <item
          android:id="@+id/register_nav"
          android:icon="@mipmap/ic_account_circle"
          android:title="@string/register"/>
        <item
          android:id="@+id/login_nav"
          android:icon="@mipmap/ic_account_circle"
          android:title="@string/login"/>
        <item
          android:id="@+id/category_nav"
          android:icon="@mipmap/ic_insert_drive_file_black_24dp"
          android:title="@string/category"/>
        <item
          android:id="@+id/timer_nav"
          android:icon="@mipmap/ic_access_alarm"
          android:title="@string/timer"/>
      </menu>
    </item>
  </group>

  <group android:checkableBehavior="single">
    <item android:title="@string/about_app">
      <menu>
        <item
          android:id="@+id/about_app_nav"
          android:title="@string/description"
          android:icon="@mipmap/ic_info"/>
        <item
          android:id="@+id/licences_nav"
          android:title="@string/licences"
          android:icon="@mipmap/ic_assignment"/>
      </menu>
    </item>
  </group>

</menu>