<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.moje.przepisy.mojeprzepisy.with_registration.MainRegisteredActivity">

  <item
    android:id="@+id/sort_alphabetic"
    android:title="@string/alphabetically"
    android:icon="@android:drawable/ic_menu_sort_alphabetically"
    app:showAsAction="never"/>

  <item
    android:id="@+id/sort_last_add"
    android:title="@string/last_add"
    app:showAsAction="never"/>

  <item
    android:id="@+id/sort_highest_rated"
    android:title="@string/highest_rated"
    app:showAsAction="never"/>

  <item
    android:id="@+id/favorites"
    android:title="@string/favorites"
    android:icon="@mipmap/ic_favorite"
    app:showAsAction="never"/>

</menu>