<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context="com.moje.przepisy.mojeprzepisy.with_registration.MainRegisteredActivity">

  <group android:checkableBehavior="single">
    <item
      android:id="@+id/sort_default"
      android:title="@string/default_sorting"
      android:visible="true"
      app:showAsAction="never"/>

    <item
      android:id="@+id/sort_alphabetic"
      android:title="@string/alphabetically"
      android:visible="true"
      app:showAsAction="never"/>

    <item
      android:id="@+id/sort_last_add"
      android:title="@string/last_add"
      android:visible="true"
      app:showAsAction="never"/>

    <item
      android:id="@+id/sort_highest_rated"
      android:title="@string/highest_rated"
      android:visible="true"
      app:showAsAction="never"/>
  </group>

</menu>