<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_register"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="0dp"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  tools:context="com.moje.przepisy.mojeprzepisy.register.RegisterActivityView"
  android:background="@color/primary_light">

  <TextView
    android:text="@string/enter_your_name"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginTop="15dp"
    android:id="@+id/name_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:inputType="textPersonName"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_name"
    android:ems="10"
    android:layout_below="@+id/name_textView"
    android:id="@+id/name_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_last_name"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/name_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/last_name_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textPersonName"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_last_name"
    android:ems="10"
    android:layout_below="@+id/last_name_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/last_name_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_login"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/last_name_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/login_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textPersonName"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_login"
    android:ems="10"
    android:layout_below="@+id/login_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/login_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_password"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/login_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/password_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textPassword"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_password"
    android:ems="10"
    android:layout_below="@+id/password_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/password_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_password_again"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/password_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/repeated_password_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textPassword"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_password_again"
    android:ems="10"
    android:layout_below="@+id/repeated_password_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/repeated_password_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_email"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/repeated_password_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/email_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textEmailAddress"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_email"
    android:ems="10"
    android:layout_below="@+id/email_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/email_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_email_again"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/email_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/repeated_email_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textEmailAddress"
    android:background="@color/aqua_transparent"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:hint="@string/your_email_again"
    android:ems="10"
    android:layout_below="@+id/repeated_email_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/repeated_email_editText"/>
  <Button
    android:text="@string/register"
    android:background="@drawable/buttons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/register_action_button"
    android:shadowColor="@color/primary"/>

  <TextView
    android:id="@+id/errorMessageTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="75dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:text=""/>
</RelativeLayout>
