<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/activity_login"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  tools:context="com.moje.przepisy.mojeprzepisy.login.LoginActivityView"
  android:background="@color/primary_light">

  <TextView
    android:layout_marginTop="100dp"
    android:text="@string/enter_your_login"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="false"
    android:id="@+id/login_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textPersonName"
    android:background="@color/primary"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:text="@string/your_login"
    android:ems="10"
    android:layout_below="@+id/login_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/login_editText"/>
  <TextView
    android:layout_marginTop="@dimen/gap_between_buttons2"
    android:text="@string/enter_your_password"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/login_editText"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/password_textView"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="@dimen/edit_text_login_size"
    android:inputType="textPassword"
    android:background="@color/primary"
    android:textColor="@color/black"
    android:textColorHint="@color/black"
    android:text="@string/your_password"
    android:ems="10"
    android:layout_below="@+id/password_textView"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/password_editText"/>
  <CheckBox
    android:text="@string/remember_password"
    android:background="@color/white_transparent"
    android:textColor="@color/black"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/remember_password_checkBox"/>
  <Button
    android:text="@string/login"
    android:background="@drawable/buttons"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/remember_password_checkBox"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="94dp"
    android:id="@+id/login_action_button"/>
  <ProgressBar
    android:id="@+id/Login_progressBar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"/>
  <TextView
    android:id="@+id/errorMessageTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:text=""/>
</RelativeLayout>
