<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sendError.SendErrorActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_send_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/black">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:contentDescription="@string/logo"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:src="@drawable/logo" />
    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/app_error_title_my_card_view_layout"
        android:layout_below="@+id/toolbar_send_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:orientation="vertical"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:id="@+id/app_error_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/app_error_title_pl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/app_error_title"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/app_error_title_ang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_error_title_pl"
                android:background="@color/black"
                android:gravity="center"
                android:text="@string/app_error_title_ang"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/app_error_text_pl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_error_title_ang"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                android:text="@string/app_error_text_pl"/>

            <TextView
                android:id="@+id/app_error_text_ang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/app_error_text_pl"
                android:textStyle="italic"
                android:layout_margin="10dp"
                android:gravity="center"
                android:textColor="@color/primary_text"
                android:textSize="15sp"
                android:text="@string/app_error_text_ang"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/send_email_button"
        android:layout_below="@+id/app_error_title_my_card_view_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/black_button"
        android:textColor="@color/white"
        android:padding="5dp"
        android:text="@string/send_email" />

</RelativeLayout>